--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "extract-text-webpack-plugin": "^0.9.1",
     "mocha": "^2.3.4",
     "node-sass": "^3.4.2",
+    "react-prefixr": "^0.1.0",
     "sass-loader": "^3.1.2",
     "style-loader": "^0.13.0",
     "webpack": "^1.12.9",
