--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "babel-loader": "^6.2.0",
     "babel-preset-es2015": "^6.1.18",
     "babel-preset-react": "^6.1.18",
+    "bezier-easing": "^1.1.1",
     "css-loader": "^0.23.0",
     "extract-text-webpack-plugin": "^0.9.1",
     "mocha": "^2.3.4",
