--- a/package.json
+++ b/package.json
@@ -15,16 +15,19 @@
     "velocity-react": "^1.1.1"
   },
   "devDependencies": {
-    "autoprefixer-loader": "^3.1.0",
-    "babel-core": "^6.2.1",
+    "autoprefixer": "^6.2.3",
+    "babel-core": "^6.3.26",
     "babel-loader": "^6.2.0",
     "babel-preset-es2015": "^6.1.18",
     "babel-preset-react": "^6.1.18",
+    "babel-preset-stage-1": "^6.3.13",
     "bezier-easing": "^1.1.1",
-    "css-loader": "^0.23.0",
+    "css-loader": "^0.23.1",
     "extract-text-webpack-plugin": "^0.9.1",
     "mocha": "^2.3.4",
     "node-sass": "^3.4.2",
+    "postcss-loader": "^0.8.0",
+    "react-css-modules": "^3.6.3",
     "react-prefixr": "^0.1.0",
     "sass-loader": "^3.1.2",
     "style-loader": "^0.13.0",
