--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "react scrollable example",
   "main": "index.js",
   "scripts": {
-    "test": "mocha test"
+    "test": "mocha test",
+    "serve": "resources/scripts/start-webpack.sh",
+    "eslint": "eslint src/**/*.js"
   },
   "author": "",
   "license": "ISC",
@@ -23,6 +25,8 @@
     "babel-preset-stage-1": "^6.3.13",
     "bezier-easing": "^1.1.1",
     "css-loader": "^0.23.1",
+    "eslint": "^1.7.2",
+    "eslint-plugin-react": "^3.6.3",
     "extract-text-webpack-plugin": "^0.9.1",
     "mocha": "^2.3.4",
     "node-sass": "^3.4.2",
@@ -31,7 +35,9 @@
     "react-prefixr": "^0.1.0",
     "sass-loader": "^3.1.2",
     "style-loader": "^0.13.0",
+    "tween.js": "^16.3.1",
     "webpack": "^1.12.9",
-    "webpack-dev-server": "^1.12.1"
+    "webpack-dev-server": "^1.12.1",
+    "babel-eslint": "^5.0.0"
   }
 }
